wordpress/wordpress-ingress.yml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress-space
spec:
  rules:
   - host: miwordpress.com
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wordpress-service
              port:
                number: 8080
